fixed size cards in marks component on mobile screen

--- a/src/components/View/Marks/style.scss
+++ b/src/components/View/Marks/style.scss
@@ -75,7 +75,7 @@
         }
         &-card{
             width: 10rem;
-            height: 18rem;
+            height: 20rem;
             margin: 0.3rem;
         }
         &-button{
